--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -4,7 +4,7 @@
         <artifactId>sfg-pet-clinic</artifactId>
         <groupId>org.barberini</groupId>
 
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
