--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>sfg-pet-clinic</artifactId>
         <groupId>org.barberini</groupId>
-        <version>0.0.3-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
